# HeadFollower

./: AndroidManifest.xml  CMakeLists.txt  README  build.sh  cmake_armeabi.sh  cmake_run_from_build.sh  default.properties
jni/: Android.mk  CMakeLists.txt  Detector.cpp  Detector.h  Detector.i  charactertracker.i  jni_part.cpp
jni/PCOpenCVTest/: CMakeLists.txt  main.cpp
jni/PCOpenCVTest/PCOpenCVTest.xcodeproj/: project.pbxproj
src/edu/mit/media/fluid/royshil/graphics/: MyAnimations.java  MyCanvasView.java
src/edu/mit/media/fluid/royshil/headfollower/: BitmapDrawerSurfaceView.java  CameraFrameProcessor.java  CharacterRenderer.java  CharacterTrackerView.java  ClearRenderer.java  FileFrameProcessor.java  FrameProcessorBase.java  HeadFollower.java  IBitmapHolder.java  ICharacterStateHandler.java  IMarkerShower.java  Sensors.java  TransformableImageView.java
